--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,26 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     <h1>Registration</h1>
 
-    <form action="/register", method="post">
-        <div>
-            <label>Name</label>
-            <input type="text" name="name" id="name">
+    <form  action="/register", method="post">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+          <div class="col-sm-10">
+            <input type="name" class="form-control" id="name" placeholder="Name" name="name">
+          </div>
         </div>
-        <div>
-            <label>Email</label>
-            <input type="email" name="email" id="email">
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="email" placeholder="Email" name="email">
+          </div>
         </div>
-        <div>
-            <label>Mobile</label>
-            <input type="number" name="mobile" id="mobile">
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Mobile</label>
+            <div class="col-sm-10">
+              <input type="number" name="mobile" id="mobile" class="form-control" placeholder="Mobile">
+            </div>
+          </div>
+       
+       
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <input type="submit" class="btn btn-primary" value="Register" >
+          </div>
         </div>
-        <div>
-            <input type="submit" value="Register" >
-        </div>
-    </form>
+      </form>
 </body>
 </html>
