--- a/views/otp.ejs
+++ b/views/otp.ejs
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>OTP</title>
 </head>
 <body>
-    <form action="/verify/<%= mobile %>" method="post">
-        <div>
-            <label for="otp">OTP send to <%= mobile %></label>
-            <input type="number" name="otp" id="otp">
+   <h2>Verification</h2>
+    <form  action="/verify/<%= mobile %>" method="post">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">OTP</label>
+          <div class="col-sm-10">
+            <input type="number" name="otp" id="otp" class="form-control" >
+          </div>
         </div>
-        <div>
-            <input type="submit" value="Verify">
+       
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <input type="submit" class="btn btn-primary" value="Verify" >
+          </div>
         </div>
-    </form>
+      </form>
 </body>
 </html>
