--- a/views/status.ejs
+++ b/views/status.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Dashboard</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
            <h1> <%= status %> </h1>
     <% } %>
     <% if(status == 'success' && typeof(user) !='undefined' ) { %>
-           <h1> Name <%= user.name %> </h1>
-           <h1> Email <%= user.email %> </h1>
-           <h1> Mobile <%= user.mobile %> </h1>
+           <h2> Name  : <%= user.name %> </h2>
+           <h2> Email :<%= user.email %> </h2>
+           <h2> Mobile :<%= user.mobile %> </h2>
     <% } else { %>
         <h1> Message: <%= message %> </h1>
     <% } %>
