--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1>Registration</h1>
 
-    <form  action="/register", method="post">
+    <form  action="/register", method="post" onsubmit="return validateForm()" name="registration">
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
           <div class="col-sm-10">
@@ -37,5 +37,26 @@
           </div>
         </div>
       </form>
+      <script>
+         function validateForm(e){
+            const name = document.forms["registration"]["name"].value;
+            const email = document.forms["registration"]["email"].value;
+            const mobile = document.forms["registration"]["mobile"].value;
+            if(name === ""){
+              alert("Name must be filled out");
+                return false;
+            }
+            if(email === ""){
+                return false;
+                alert("Email must be filled out");
+            }
+            
+            if(isNaN(mobile) ){
+                alert("Invalid Mobile Number");
+                return false;
+            }
+            return true
+        }
+      </script>
 </body>
 </html>
